* fix logo placement on obile * improve look of endorsement CTA box * fix bug where buttons were touching on mobile

--- a/src/assets/scss/_button.scss
+++ b/src/assets/scss/_button.scss
@@ -53,15 +53,15 @@ button[disabled]:active {
   font-family: $family-code;
   font-size: 1rem;
   font-weight: 700;
-  padding: 0.2rem 1.125rem 0.3rem;
+  padding: 0.25rem 1.125rem 0.25rem;
   min-height: 2.375rem;
   min-width: 110px;
   transition: all 150ms ease-in-out;
 
   @media screen and (max-width: $tablet) {
-    font-size: 0.75rem;
-    min-height: 2rem;
-    padding: 0.1rem 1.125rem 0.2rem;
+    font-size: 0.875rem;
+    min-height: 2.25rem;
+    padding: 0.15rem 1.125rem 0.2rem;
   }
 }
 
@@ -92,7 +92,6 @@ button[disabled]:active {
 
 .button.is-purple:hover {
   background-color: lighten($purple, 10%);
-  box-shadow: 0px 4px 20px rgba(255, 132, 153, 0.3);
   border: none;
   color: white;
 }
@@ -120,15 +119,19 @@ button[disabled]:active {
 .button-left {
   margin-right: 0.5rem;
 
-  @media screen and (max-width: 390px) {
-    margin-right: 0;
+  @media screen and (max-width: 382px) {
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
   }
 }
 
 .button-right {
   margin-left: 0.5rem;
 
-  @media screen and (max-width: 390px) {
-    margin-left: 0;
+  @media screen and (max-width: 382px) {
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
   }
 }
