--- a/src/assets/scss/_message.scss
+++ b/src/assets/scss/_message.scss
@@ -5,6 +5,9 @@
 }
 
 .message-endorse {
+  background-color: transparent;
+  border: 1px solid rgba(100, 100, 100, 0.15);
+  margin-top: 0;
   height: 10rem;
   overflow: hidden;
 
